--- a/includes/nav_admin.html
+++ b/includes/nav_admin.html
@@ -1,6 +1,8 @@
 <a href="#modalcheck" id="save" title="Save edits" data-height="50" class="modal-action modal-trigger btn blue white-text" style="vertical-align: bottom;">Save</a>
 <a href="#!" id="courses" title="Return to courses" class="btn light-green white-text" ng-click="courses()" style="vertical-align: bottom;">Courses</a>        
 <a href="#modalprofile" id="profile" title="Profile" data-height="50" class="modal-action modal-trigger right"><img src="{{photoUrl}}" style="height: 40px;border-radius:50%"></a>
+<a href="#modaldownload" id="download" title="Download" data-height="40" class="modal-action modal-trigger right btn-flat white" style="width:45; height:45;"><img src="images/download.svg"></a>
+
 
 <div class="fixed-action-btn horizontal top click-to-toggle">
     <a class="btn-floating btn-large red">
