added About link

--- a/includes/nav_signin.html
+++ b/includes/nav_signin.html
@@ -1,1 +1,2 @@
+<a href="" ng-click="nav('includes/about.html')" style="vertical-align: bottom;" class="left bottom">About</a>
 <a ng-click="signin()" class="btn blue white-text right" style="margin-bottom: 10px;">Sign in</a>
