--- a/includes/nav_admin.html
+++ b/includes/nav_admin.html
@@ -22,6 +22,7 @@
       <li><a class="btn-floating orange center" ng-click="nav('includes/admin_levels.html')">Lv</a></li>
       <li><a class="btn-floating yellow center" ng-click="nav('includes/admin_quiz.html')">Qz</a></li>
       <li><a class="btn-floating pink center" ng-click="nav('includes/admin_daily.html')">Dy</a></li>
+      <li><a class="btn-floating red center" ng-click="nav('includes/admin_list.html')">Li</a></li>
     </ul>
   </div>
 
