added error variable

--- a/includes/404.html
+++ b/includes/404.html
@@ -181,7 +181,7 @@
      xml:space="preserve"><tspan
        y="50.064934"
        x="99.675323"
-       id="tspan3372">An error occurred.</tspan></text>
+       id="tspan3372">{{error}}</tspan></text>
   <path
      id="path3380"
      d="M 35.414282,62.955131 C 53.370839,57.54134 53.370839,57.928038 53.370839,57.928038"
