updates for changed variable names

--- a/includes/admin_badges.html
+++ b/includes/admin_badges.html
@@ -5,7 +5,7 @@
 </tr>
 </table>
 
-<div ng-repeat="item in data.badges">
+<div ng-repeat="item in readonly.badges">
 	<ul class="collection with-header">
 		<li class="collection-item">
 			<form class="col s12">
