--- a/includes/admin_courses.html
+++ b/includes/admin_courses.html
@@ -5,7 +5,7 @@
   </tr>
 </table>
       
-<div ng-repeat="item in alldata.courses">
+<div ng-repeat="item in admin.courses">
   <ul class="collection with-header">
     <li class="collection-item">
       <form class="col s12">
