--- a/includes/admin_lessons.html
+++ b/includes/admin_lessons.html
@@ -1,4 +1,3 @@
-
 <table>
 <tr>
 	<td style='color: #8bc34a; font-size: 2em;'>Lessons</td>
@@ -9,7 +8,7 @@
 </tr>
 </table>
 
-<div ng-repeat="item in data.lessons">
+<div ng-repeat="item in readonly.lessons">
 	<ul class="collection with-header">
 		<li class="collection-item">
 				 <div class="row">
