--- a/includes/admin_levels.html
+++ b/includes/admin_levels.html
@@ -1,4 +1,3 @@
-
 <table>
 <tr>
 	<td style='color: #8bc34a; font-size: 2em;'>Levels</td>
@@ -6,7 +5,7 @@
 </tr>
 </table>
 
-<div ng-repeat="item in data.levels">
+<div ng-repeat="item in readonly.levels">
 	<ul class="collection with-header">
 		<li class="collection-item">
 			<form class="col s12">
@@ -47,8 +46,3 @@
 	</ul>
 </div>
 <br>
-
-
-
-
-    		
