--- a/includes/admin_quiz.html
+++ b/includes/admin_quiz.html
@@ -1,4 +1,3 @@
-
 <table>
 <tr>
 	<td style='color: #8bc34a; font-size: 2em;'>Quizzes</td>
@@ -6,7 +5,7 @@
 </tr>
 </table>
 
-<div ng-repeat="item in data.quizlist">
+<div ng-repeat="item in readonly.quizzes">
 	<ul class="collection with-header">
 		<li class="collection-item">
 				<div class="row">
@@ -27,10 +26,10 @@
           					</tr>
         				</thead>
 
-        				<tbody ng-repeat="user in data.users">
+        				<tbody ng-repeat="user in users">
 				 			<tr>
-				 				<td>{{user.name}}</td>
-				 				<td><input class="TextBox" type="number" validate="number" ng-model="user.quizzes[$parent.$index].grade" ng-change="user.quizzes[$parent.$index].xp = setQuiz(user.quizzes[$parent.$index].grade,$parent.$index)"/><td>
+				 				<td>{{user.email}}</td>
+				 				<td><input class="TextBox" type="number" validate="number" ng-model="user.quizzes[$parent.$index].grade" ng-change="user.quizzes[$parent.$index].name = $parent.item.name; user.quizzes[$parent.$index].xp = setQuiz(user.quizzes[$parent.$index].grade,$parent.$index)"/><td>
 				 				<td><span style='color: orange;'><b>XP </b></span><span class="chip blue white-text">{{user.quizzes[$parent.$index].xp}}</span></td>
 				 			</tr>
 				 		</tbody>
@@ -40,13 +39,3 @@
 		</li>
 	</ul>
 </div>
-
-<!--
-<a ng-click="myalert()" class="waves-effect waves-light btn">View json</a>
-
-<div id="jsoncurrent"></div>
-
--->
-
-
-    		
