--- a/includes/lessons_all.html
+++ b/includes/lessons_all.html
@@ -167,5 +167,5 @@
   </svg>
 
   </div>
-	   <a ng-repeat="item in data.lessons" href="" id='data{{$index}}' class="collection-item" ng-click="setData($index)">{{item.name}}</a>
+	   <a ng-repeat="item in readonly.lessons" href="" id='data{{$index}}' class="collection-item" ng-click="setData($index)">{{item.name}}</a>
   </div>
