--- a/includes/nav_student.html
+++ b/includes/nav_student.html
@@ -1,6 +1,4 @@
-            
 <a id="student" title="Return to view" class="btn blue white-text" ng-click="nav('includes/student_view.html')" style="vertical-align: bottom;">My view</a> 
 <a id="lessons" title="View lessons" class="btn light-green white-text" ng-click="nav('includes/lessons_all.html')" style="vertical-align: bottom;">Lessons</a> 
 
-<a href="#modalprofile" id="profile" title="Profile" data-height="50" class="modal-action modal-trigger right"><img src="{{photoUrl}}" style="height: 40px;border-radius:50%"></a>
-
+<a href="#modalprofile" id="profile" title="Profile" data-height="50" class="modal-action modal-trigger right"><img ng-src="{{photoUrl}}" style="height: 40px;border-radius:50%"></a>
