--- a/includes/student_badges.html
+++ b/includes/student_badges.html
@@ -8,9 +8,9 @@
             <br>
 
             <ul ng-repeat="(key, value) in user.badges" class="collection with-header" ng-show="badgestotal!=0">
-                <li class="collection-item avatar" ng-repeat="badge in data.badges" ng-show="data.badges[$index].id == key">
-                  <img src="images/0.svg" title="{{badge.name}}" ng-show="value < 3" class="circle"/>
-                  <img src="images/badges/{{key}}.svg" title="{{badge.name}}" ng-show="value >= 3" class="circle"/>
+                <li class="collection-item avatar" ng-repeat="badge in readonly.badges" ng-show="readonly.badges[$index].id == key">
+                  <img ng-src="images/badges/0.svg" title="{{badge.name}}" ng-show="value < 3" class="circle"/>
+                  <img ng-src="images/badges/{{key}}.svg" title="{{badge.name}}" ng-show="value >= 3" class="circle"/>
                   <p class="title">{{badge.name}}</p>
                   <p ng-show="value >= 3" style='color: orange;'>You have earned the badge.</p>
                   <p ng-show="value < 3">Almost there. You need 3x to earn the badge.</p>
@@ -23,8 +23,8 @@
             <a class="waves-effect waves-light btn light-green" ng-click="showdetails = !showdetails">Badge list</a>
             
               <ul class="collection with-header" ng-show="showdetails">
-                <li class="collection-item avatar"  ng-repeat="badge in data.badges">
-                  <img src="images/badges/{{badge.id}}.svg" title="{{badge.name}}" class="circle"/>
+                <li class="collection-item avatar"  ng-repeat="badge in readonly.badges">
+                  <img ng-src="images/badges/{{badge.id}}.svg" title="{{badge.name}}" class="circle"/>
                   <p class="title">{{badge.name}}</p>
                   <p>Earn badge when it appears 3X in daily comments.</p>
                   <div href="#!" class="secondary-content">
