--- a/includes/student_quiz.html
+++ b/includes/student_quiz.html
@@ -3,16 +3,16 @@
       <div class="card">
           <div class="card-content">
             <span class="card-title">Quizzes</span>
-            <div ng-repeat="quiz in data.quizlist">
+            <div ng-repeat="quiz in user.quizzes">
               <ul class="collection with-header">
                 <li class="collection-item avatar">
-                  <img src="images/quiz.svg" ng-show="user.quizzes[$index].xp > 0" class="circle"/>
-                  <img src="images/quiz2.svg" ng-show="user.quizzes[$index].xp == 0" class="circle"/>
-                  <img src="images/quiz2.svg" ng-show="user.quizzes[$index].grade == -99" class="circle"/>
+                  <img src="images/quiz.svg" ng-show="quiz.xp > 0" class="circle"/>
+                  <img src="images/quiz2.svg" ng-show="quiz.xp == 0" class="circle"/>
+                  <img src="images/quiz2.svg" ng-show="quiz.grade == -99" class="circle"/>
                   <p class="title">{{quiz.name}}</p>
-                  <p>{{user.quizzes[$index].grade}}%</p>
+                  <p>{{quiz.grade}}%</p>
                   <div class="secondary-content">
-                    <p class="chip blue white-text">{{user.quizzes[$index].xp}}</p>
+                    <p class="chip blue white-text">{{quiz.xp}}</p>
                   </div>
                 </li>
               </ul>
