--- a/includes/student_view.html
+++ b/includes/student_view.html
@@ -72,7 +72,7 @@
         <table>
           <tr>
             <td><span class="card-title">Quiz XP: {{user.quiztotal}}</span></td>
-            <td class="right"><span class="badge blue white-text" ng-show="quiztotal!=0">{{user.quizzes.length}} quizzes</span></td>
+            <td class="right"><span class="badge blue white-text" ng-show="user.quiztotal!=0">{{user.quizzes.length}} quizzes</span></td>
           </tr>
           </table>
           <table>
@@ -89,9 +89,3 @@
       </div>
   </div>
 </div>
-   
-
-
-
- 
-
