--- a/includes/admin_courses.html
+++ b/includes/admin_courses.html
@@ -11,8 +11,8 @@
       <form class="col s12">
           <div class="row">
                   <div class="input-field">
-                    <input id="name" type="text" ng-model="item.name">
-                    <label class='md-no-float' for="name">Course name</label>
+                    <input id="name" type="text" ng-model="item.name" ng-change="checkCname(item.name,$index)">
+                    <label class='md-no-float' for="name">Course name (one word, restricted characters #/[].$)</label>
                   </div>
                   <div class="input-field">
                     <input id="descname" type="text" ng-model="item.descname">
@@ -26,10 +26,9 @@
                     <a class="waves-effect waves-light btn light-green" ng-click="navAdmin(item.name)">Edit</a>
                     <a class="waves-effect waves-light btn pink" ng-click="removecourse($index)">Delete</a>
                   </div>
-
           </div>
       </form>
     </li>
   </ul>
 </div>
-<br>      
+<br>
