--- a/includes/nav_admin.html
+++ b/includes/nav_admin.html
@@ -4,7 +4,7 @@
 <a href="#modaldownload" id="download" title="Download" data-height="40" class="modal-action modal-trigger right btn-flat white" style="width:45; height:45;"><img src="images/download.svg"></a>
 
 
-<div class="fixed-action-btn horizontal top click-to-toggle">
+<div class="fixed-action-btn vertical top click-to-toggle">
     <a class="btn-floating btn-large red pulse">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="10px" width="50px" height="50px" viewBox="0 0 800 800">
 		<path fill="#FFFFFF" d="M590.7,572.6H209.5c-14.8,0-26.8-12-26.8-26.8c0-14.8,12-26.8,26.8-26.8h381.1c14.8,0,26.8,12,26.8,26.8
