--- a/includes/admin_courses.html
+++ b/includes/admin_courses.html
@@ -12,7 +12,7 @@
           <div class="row">
                   <div class="input-field">
                     <input id="name" type="text" ng-model="item.name" ng-change="checkCname(item.name,$index)">
-                    <label class='md-no-float' for="name">Course name (one word, restricted characters #/[].$)</label>
+                    <label class='md-no-float' for="name">Course name (no spaces,#/[].$)</label>
                   </div>
                   <div class="input-field">
                     <input id="descname" type="text" ng-model="item.descname">
