--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -7,22 +7,20 @@
 		</td>
 	</tr>
 </table>
-
+<div ng-repeat="(key, item) in listArray">
 	<ul class="collection with-header">
-	<li ng-repeat="(key, item) in listArray" class="collection-item avatar">
+	<li class="collection-item avatar">
       <img ng-src='{{item.photoUrl}}' alt="{{item.name}}" height='50px' class="circle">
       <span class="title">{{item.name}} ({{item.email}})</span>
       <p ng-show="item.confirmed==true">Points: {{item.pointstotal}}</p>
       <p ng-show="item.confirmed==false" class="red-text">Unconfirmed new user</p>
       <br>
       <p>
-          <input type="checkbox" class=" class="filled-in checkbox-pink" id="deleteme{{$index}}" ng-click="$scope.showedit = !$scope.showedit"/>
+          <input type="checkbox" class="filled-in checkbox-pink" id="deleteme{{$index}}" ng-click="$scope.showedit = !$scope.showedit"/>
           <label for="deleteme{{$index}}"></label>
           <a class="waves-effect waves-light btn pink" ng-init="$scope.showedit = true" ng-disabled="$scope.showedit" ng-click="removeuser(item.uid,$index)">Delete</a>
         </p>
-	  
       <a ng-repeat="(name,value) in item.badges" ng-show="value>=3" href="#!" class="secondary-content"><img src='images/badges/{{name}}.svg'></a>
     </li>
     </ul>
-
-<br>
+</div>
