--- a/includes/admin_lessons.html
+++ b/includes/admin_lessons.html
@@ -3,7 +3,6 @@
 	<td style='color: #8bc34a; font-size: 2em;'>Lessons</td>
 	<td class="right">
 		<a ng-click="addlesson(item.name)" class="waves-effect waves-light btn light-green">Add</a>
-		<a ng-click="nav('includes/lessons_all.html')" class="waves-effect waves-light btn blue">View</a>
 	</td>
 </tr>
 </table>
@@ -24,6 +23,7 @@
 				    <a class="waves-effect waves-light btn blue" ng-disabled="$index == 0" ng-click="uplesson($index)">Up</a>
 				    <a class="waves-effect waves-light btn blue" ng-disabled="$last" ng-click="downlesson($index)">Down</a>
 				    <a class="waves-effect waves-light btn pink" ng-click="removelesson($index)">Delete</a>
+				    <a ng-click="setData($index)" class="waves-effect waves-light btn blue">View</a>
 				 </div>
 				 <div ng-show="$scope.showdetails">
 				 	<h5>Details</h5>
