--- a/includes/lessons_one.html
+++ b/includes/lessons_one.html
@@ -1,39 +1,38 @@
-<h5>Lesson</h5>
-<div class="row" align="center">
-	<div class="col s12">
-    	<div class="card">
-        	<div class="card-image" ng-hide="lesson.img ==''">
-            	<img ng-src="{{lesson.img}}"/>
-              	<span class="card-title">{{lesson.name}}</span>
-            </div>
-            <div class="card-content">
-              	<span class="card-title blue-text" ng-hide="lesson.img !=''">{{lesson.name}}</span>
-              	<p>{{lesson.desc}}</p>
-            </div>
-            <div class="card-action" ng-hide="lesson.keywords.length == 0 &&  lesson.expectations.length == 0">
-              	<div title="keywords" class="chip blue white-text" ng-repeat="key in lesson.keywords">{{key}}</div>
-				<div title="curriculum expectations" class="chip orange white-text" ng-repeat="expectation in lesson.expectations">{{expectation}}</div>
-            </div>
-       	</div>
-	</div>
-</div>
+<div class="row">
+    <div class="col s12">
+      <div class="card z-depth-1">
+    
+        <div class="card-image z-depth-0">
+          <img ng-src="{{lesson.img}}" ng-hide="lesson.img ==''"/>
+        <div class="card-content">
+          <h3 style="margin-top:0px;">{{lesson.name}}</h3>
+          <p style="font-size: large;">{{lesson.desc}}</p>
 
-<h5 ng-hide="lesson.segments.length == 0">Lesson Segments</h5>
-<div class="collection" ng-repeat="item in lesson.segments">
-	<a href="" class="collection-item" ng-click="showme = !showme">{{$index}} : {{item.title}}</a>
-		<div ng-show="showme" class="row" align="center">
-          	<div class="card" style='width: 95%; margin-bottom: 0px; margin-top: 20px;'>
-            	<div class="card-image" ng-hide="item.segimg ==''">
-              		<img ng-src="{{item.segimg}}"/>
-              		<span class="card-title">{{item.title}}</span>
-            	</div>
-            	<div class="card-content">
-            		<span class="card-title blue-text" ng-hide="item.segimg !=''">{{item.title}}</span>
-              		<p>{{item.text}}</p>
-            	</div>
-            	<div class="card-action" ng-hide="item.seglink ==''">
-              		<a href="{{item.seglink}}" target="_blank">Link</a>
-            	</div>
-          	</div>
-      	</div>
-</div>
+
+          <div class="collection">
+            <div ng-repeat="item in lesson.segments" class="row" style="margin-bottom: 0px; margin-top: 0px;">
+            <a href="" class="collection-item" ng-click="showme = !showme">{{item.title}}</a>
+              <div ng-show="showme" class="card horizontal z-depth-0" style="margin-bottom: 0px;">
+                <div class="card-image" ng-hide="item.segimg ==''">
+                  <img ng-src="{{item.segimg}}"/>
+                </div>
+                <div class="card-content">
+                  <p>{{item.text}}</p>
+                  <a href="{{item.seglink}}" target="_blank">Link</a>
+                </div>
+              </div>
+              </div>
+          </div>
+
+          <a href="" ng-click="makePDF(lesson)" id="pdf" title="PDF" data-height="50" class="btn light-green white-text" style="vertical-align: bottom;">PDF</a>
+        </div>
+        <div class="card-action">
+          <div ng-hide="lesson.keywords.length == 0 &&  lesson.expectations.length == 0">
+            <div title="keywords" class="chip blue white-text" ng-repeat="key in lesson.keywords">{{key}}</div>
+            <div title="curriculum expectations" class="chip orange white-text" ng-repeat="expectation in lesson.expectations">{{expectation}}</div>
+          </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>   
