--- a/includes/student_daily.html
+++ b/includes/student_daily.html
@@ -1,21 +1,20 @@
 <div class="row">
   <div class="col s12">
-      <div class="card">
-          <div class="card-content">
-            <span class="card-title">Daily comments</span>
-            <div ng-repeat="item in user.daily" ng-show="dailytotal!=0">
-              <ul class="collection with-header">
-                <li class="collection-item avatar" ng-repeat="lesson in readonly.lessons">
-                  <img ng-src="images/badges/{{item.badge}}.svg" class="circle"/>
-                  <p class="title">{{lesson.name}}</p>
-                  <p>{{item.desc}}</p>
-                  <div href="#!" class="secondary-content">
-                    <p class="chip blue white-text">{{item.grade}}</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-         </div>
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Daily comments</span>
+          <ul class="collection with-header">
+            <!-- <li class="collection-item avatar" ng-repeat="item in user.daily" ng-show="dailytotal!=0"> -->
+            <li class="collection-item avatar" ng-repeat="daily in readonly.daily">
+              <img ng-src="images/badges/{{user.daily[$index].badge}}.svg" class="circle"/>
+              <p class="title">{{daily.id.name}}</p>
+              <p>{{user.daily[$index].desc}}</p>
+              <div href="#!" class="secondary-content">
+                <p class="chip blue white-text">{{user.daily[$index].grade}}</p>
+              </div>              
+            </li>
+          </ul>
+        </div>
       </div>
-  </div>
+    </div>
 </div>
