--- a/includes/student_view.html
+++ b/includes/student_view.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col s12 m6">
-      <div class="card">
+      <div class="card hoverable">
           <div class="card-content">
             <table>
               <tr>
@@ -20,7 +20,7 @@
       </div>
   </div>
   <div class="col s12 m6">
-    <div class="card white">
+    <div class="card hoverable">
       <div class="card-content">
         <table>
           <tr>
@@ -45,7 +45,7 @@
 
 <div class="row">
   <div class="col s12 m6">
-    <div class="card white">
+    <div class="card hoverable">
       <div class="card-content">
         <table>
           <tr>
@@ -67,7 +67,7 @@
       </div>
   </div>
   <div class="col s12 m6">
-    <div class="card white">
+    <div class="card hoverable">
       <div class="card-content">
         <table>
           <tr>
